--- a/lang/es.json
+++ b/lang/es.json
@@ -11,7 +11,7 @@
     "[recommended reading]": "Lecturas recomendadas",
     "[start]": "Iniciar",
     "[questions]": "Preguntas",
-    "[learning content]": "Contenido de aprendizaje",
+    "[learning content]": "Contenido",
     "[of]": "de",
     "[next question]": "próxima pregunta",
     "[previous question]": "pregunta anterior",
