--- a/lang/fr.json
+++ b/lang/fr.json
@@ -11,7 +11,7 @@
     "[recommended reading]": "Lecture recommandée",
     "[start]": "Démarrage",
     "[questions]": "Questions",
-    "[learning content]": "Contenu d'apprentissage",
+    "[learning content]": "Contenu",
     "[of]": "de",
     "[next question]": "prochaine question",
     "[previous question]": "question ultérieure",
