--- a/lang/pt-br.json
+++ b/lang/pt-br.json
@@ -11,7 +11,7 @@
     "[recommended reading]": "Leitura recomendada",
     "[start]": "Iniciar",
     "[questions]": "Questões",
-    "[learning content]": "Conteúdo de aprendizado",
+    "[learning content]": "Conteúdo",
     "[of]": "de",
     "[next question]": "próxima questão",
     "[previous question]": "questão anterior",
