--- a/lang/en.json
+++ b/lang/en.json
@@ -65,5 +65,6 @@
     "[login skip]": "Skip step, start anonymously",
     "[confirn your name and email]": "OK, name and email are correct",
     "[login header]": "Introduce yourself",
-    "[survey mode caption]": "The answer will not have any impact on your progress"
+    "[survey mode caption]": "The answer will not have any impact on your progress",
+    "[download]": "Download"
 }
