--- a/lang/ua.json
+++ b/lang/ua.json
@@ -65,5 +65,6 @@
     "[login skip]": "Пропустити цей крок, почати анонімно",
     "[confirn your name and email]": "ОК, ім'я та e-mail коректні",
     "[login header]": "Представтеся",
-    "[survey mode caption]": "Відповідь на це питання не вплине на ваш прогрес"
+    "[survey mode caption]": "Відповідь на це питання не вплине на ваш прогрес",
+    "[download]": "Завантажити"
 }
