--- a/lang/ua.json
+++ b/lang/ua.json
@@ -61,7 +61,7 @@
     "[scenario has not been passed successfully]": "Питання \"Сценарій\" не пройдене",
     "[the owner of the course has limited the access]": "Автор обмежив доступ до курсу",
     "[back to sign in]": "Назад",
-    "[login explanation]": "* Авторизуючись будь-яким з вище наданих кроків, ви погоджуєтесь з тим, що ваші результати будуть збережені. Ці результати будуть показані лише автору цього курса.",
+    "[login explanation]": "* Авторизуючись будь-яким з вище наданих кроків, Ви погоджуєтесь з тим, що Ваші результати будуть збережені. Ці результати будуть показані лише автору цього курса.",
     "[login skip]": "Пропустити цей крок, почати анонімно",
     "[confirn your name and email]": "ОК, ім'я та e-mail коректні",
     "[login header]": "Представтеся",
