Add retrying for sending LTI results

--- a/lang/ca.json
+++ b/lang/ca.json
@@ -42,9 +42,10 @@
     "[tracking and tracing continue anyway]": "Continua de totes maneres",
     "[tracking and tracing hint without skip]": "Introdueixi les seves credencials i feu clic a \"Iniciar i informar els meus resultats\" per a començar el curs.",
     "[tracking and tracing error hint without continue]": "Reinicieu el curs. Comuniqui amb el proveïdor de cursos si el problema persisteix.",
+    "[tracking and tracing reporting progress]": "informes de resultats …",
     "[answered]": "contestat",
     "[overall progress]": "progrés general",
-    "[save and continue later]": "guardar i continuar més tard",
+    "[save and continue later]": "Guardar i continuar més tard",
     "[cancel]": "Cancel",
     "[finish course popup title]": "Està a només un pas d'acabar el curs",
     "[finish course popup explanation title]": "Recordeu que:",
