--- a/lang/de.json
+++ b/lang/de.json
@@ -45,6 +45,7 @@
     "[tracking and tracing continue anyway]": "Trotzdem fortfahren",
     "[tracking and tracing hint without skip]": "Bitte geben Sie hier Ihre Daten ein und klicken Sie auf \"Starten und meine Fortschritte aufzeichnen\", um Ihre Lernfortschritte aufzuzeichnen.",
     "[tracking and tracing error hint without continue]": "Starten Sie den Kurs erneut. Kontaktieren Sie den Kurs-Autor falls das Problem weiterhin besteht.",
+    "[tracking and tracing reporting progress]": "Fortschritte werden aufgezeichnet...",
     "[answered]": "beantwortet",
     "[overall progress]": "Gesamtfortschritt",
     "[save and continue later]": "Speichern und später fortfahren",
