--- a/lang/en.json
+++ b/lang/en.json
@@ -45,9 +45,10 @@
     "[tracking and tracing continue anyway]": "Continue anyway",
     "[tracking and tracing hint without skip]": "Please enter your credentials and click \"Start and report my results\" to start the course.",
     "[tracking and tracing error hint without continue]": "Restart the course. Contact your course provider if the problem persists.",
+    "[tracking and tracing reporting progress]": "Reporting results...",
     "[answered]": "answered",
     "[overall progress]": "overall progress",
-    "[save and continue later]": "save and continue later",
+    "[save and continue later]": "Save and continue later",
     "[cancel]": "Cancel",
     "[finish course popup title]": "You are one step away from finishing the course",
     "[finish course popup explanation title]": "Please note that:",
