--- a/lang/es.json
+++ b/lang/es.json
@@ -45,9 +45,10 @@
     "[tracking and tracing continue anyway]": "Continuar de todos modos",
     "[tracking and tracing hint without skip]": "Introduzca sus credenciales y haga clic en \"Iniciar e informar mis resultados\" para comenzar el curso.",
     "[tracking and tracing error hint without continue]": "Reinicie el curso. Comuníquese con su proveedor de cursos si el problema persiste.",
+    "[tracking and tracing reporting progress]": "informando resultados...",
     "[answered]": "contestado",
     "[overall progress]": "progreso general",
-    "[save and continue later]": "guardar y continuar más tarde",
+    "[save and continue later]": "Guardar y continuar más tarde",
     "[cancel]": "Cancelar",
     "[finish course popup title]": "Está a solo un paso de terminar el curso",
     "[finish course popup explanation title]": "Tenga en cuenta que:",
