--- a/lang/fr.json
+++ b/lang/fr.json
@@ -45,9 +45,10 @@
     "[tracking and tracing continue anyway]": "Continuer malgré tout",
     "[tracking and tracing hint without skip]": "Veuillez saisir vos informations d’identification puis cliquer sur \"Démarrer et enregistrer mes résultats\" afin de démarrer le cours.",
     "[tracking and tracing error hint without continue]": "Redémarrez le cours. Contactez le responsable de la formation si le problème persiste.",
+    "[tracking and tracing reporting progress]": "Enregistrer la progression",
     "[answered]": "répondue(s)",
     "[overall progress]": "Avancement global",
-    "[save and continue later]": "enregistrer et continuer plus tard",
+    "[save and continue later]": "Enregistrer et continuer plus tard",
     "[cancel]": "Annuler",
     "[finish course popup title]": "Vous n'êtes plus qu'à une étape de la fin du cours.",
     "[finish course popup explanation title]": "Veuillez noter les points suivants :",
