--- a/lang/it.json
+++ b/lang/it.json
@@ -45,9 +45,10 @@
     "[tracking and tracing continue anyway]": "Continua comunque",
     "[tracking and tracing hint without skip]": "Si prega di inserire le proprie credenziali e fare clic su \"Inizia e riportare i miei risultati\" per iniziare il corso.",
     "[tracking and tracing error hint without continue]": "Riavviare il corso. Contattare il fornitore di corso se il problema persiste.",
+    "[tracking and tracing reporting progress]": "Registra i progressi...",
     "[answered]": "risposta",
     "[overall progress]": "progressi generali",
-    "[save and continue later]": "salva e continua più tardi",
+    "[save and continue later]": "Salva e continua più tardi",
     "[cancel]": "Annulla",
     "[finish course popup title]": "Sei ad un passo dal termine del corso",
     "[finish course popup explanation title]": "Si prega di notare che:",
