--- a/lang/nl.json
+++ b/lang/nl.json
@@ -45,9 +45,10 @@
     "[tracking and tracing continue anyway]": "Ga door",
     "[tracking and tracing hint without skip]": "Vul uw gegevens in en klik op ‘Start en rapporteer mijn resultaten’ om de cursus te beginnen",
     "[tracking and tracing error hint without continue]": "Herstart de cursus. Neem contact op met uw cursusleider als het probleem niet is opgelost.",
+    "[tracking and tracing reporting progress]": "Resultaten vastleggen...",
     "[answered]": "beantwoord",
     "[overall progress]": "Totale voortgang",
-    "[save and continue later]": "bewaar en ga later verder",
+    "[save and continue later]": "Bewaar en ga later verder",
     "[cancel]": "Annuleer",
     "[finish course popup title]": "Nog 1 stap en u heeft de cursus beëindigd",
     "[finish course popup explanation title]": "Merk op dat:",
