--- a/lang/no.json
+++ b/lang/no.json
@@ -45,6 +45,7 @@
     "[tracking and tracing continue anyway]": "Fortsett likevel",
     "[tracking and tracing hint without skip]": "Vennligst fyll inn dine detaljer og klikk \"Start og rapporter mine resultater\" for å starte kurset.",
     "[tracking and tracing error hint without continue]": "Start kurset på nytt. Kontakt kursleverandøren dersom problemet vedvarer.",
+    "[tracking and tracing reporting progress]": "Oppsummering av resultat…",
     "[answered]": "Besvart",
     "[overall progress]": "Total fremdrift",
     "[save and continue later]": "Lagre og fortsett senere",
