--- a/lang/pt-br.json
+++ b/lang/pt-br.json
@@ -45,6 +45,7 @@
     "[tracking and tracing continue anyway]": "Continuar mesmo assim",
     "[tracking and tracing hint without skip]": "Favor digitar suas credenciais e clicar \"Iniciar e reportar meus resultados\" para iniciar o curso.",
     "[tracking and tracing error hint without continue]": "Reinicie o curso. Contate seu provedor de cursos se o problema persistir.",
+    "[tracking and tracing reporting progress]": "Relatando os resultados...",
     "[answered]": "respondida",
     "[overall progress]": "progresso geral",
     "[save and continue later]": "Salvar e continuar mais tarde",
