--- a/lang/ua.json
+++ b/lang/ua.json
@@ -45,6 +45,7 @@
     "[tracking and tracing continue anyway]": "Продовжити",
     "[tracking and tracing hint without skip]": "Будь-ласка, вкажіть необхідні дані та натисніть \"Так, відстежувати мій \nпрогрес\" для того, щоб розпочати курс",
     "[tracking and tracing error hint without continue]": "Натисніть 'Спробувати ще'. Якщо помилка виникне знову, зв'яжіться з організацією, що надала вам курс.",
+    "[tracking and tracing reporting progress]": "Надсилаемо прогресс...",
     "[answered]": "пройдено",
     "[overall progress]": "загальний прогрес",
     "[save and continue later]": "Зберегти і продовжити пізніше",
