--- a/lang/ru.json
+++ b/lang/ru.json
@@ -67,5 +67,13 @@
     "[confirn your name and email]": "ОК, имя и e-mail корректны",
     "[login header]": "Представьтесь",
     "[survey mode caption]": "Ответ на этот вопрос не повлияет на Ваш прогресс",
-    "[download]": "Скачать"
+    "[download]": "Скачать",
+    "[results send error title]": "Ваш прогресс был сохранен, но webhook НЕ был отправлен автору",
+    "[try to submit again key]": "Пожалуйста попробуйте отправить результаты ещё раз",
+    "[contanct with author key]": "Пожалуйста, сообщите об этом автору, если проблема до сих пор присутствует",
+    "[general-message-key]": "Ошибка:",
+    "[error-message-key]": "не удалось подключиться к хосту",
+    "[resend-results-key]": "Отправить результаты ещё раз",
+    "[close without reporting results]": "Закончить курс без отправки моих результатов",
+    "[back]": "Назад"
 }
