--- a/lang/ua.json
+++ b/lang/ua.json
@@ -69,11 +69,12 @@
     "[survey mode caption]": "Відповідь на це питання не вплине на ваш прогрес",
     "[download]": "Завантажити",
     "[results send error title]": "Ваш прогрес був збережений, але webhook НЕ був надісланий автору",
-    "[try to submit again key]": "Будь-ласка, спробуйте відправити результати ще раз",
-    "[contanct with author key]": "Будь-ласка, повідомте про це автору, якщо проблема досі існує",
+    "[try to submit again key]": "Будь ласка, спробуйте відправити результати ще раз",
+    "[contanct with author key]": "Будь ласка, повідомте автору курсу, якщо проблема не зникає",
     "[general-message-key]": "Помилка:",
     "[error-message-key]": "не вдалося підключитися до хосту",
     "[resend-results-key]": "Відправити результати ще раз",
-    "[close without reporting results]": "Завершити курс без відправки моїх результатів",
-    "[back]": "Назад"
+    "[close without reporting results]": "Завершити курс без відправки {endpointName}",
+    "[back]": "Назад",
+    "[webhooks endpoint name key]": "вебхукі"
 }
